After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736384 - v4l2sink: pool not unreffed after usage
v4l2sink: pool not unreffed after usage
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.4.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-10 07:54 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-09-10 12:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
v4l2sink: Unref pool after usage (668 bytes, patch)
2014-09-10 07:54 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2014-09-10 07:54:03 UTC
Created attachment 285796 [details] [review]
v4l2sink: Unref pool after usage

A buffer pool is not unreffed after usage.
Comment 1 Nicolas Dufresne (ndufresne) 2014-09-10 12:25:39 UTC
Review of attachment 285796 [details] [review]:

This is correct, thanks you for the patch.
Comment 2 Nicolas Dufresne (ndufresne) 2014-09-10 12:29:01 UTC
Comment on attachment 285796 [details] [review]
v4l2sink: Unref pool after usage

mater: commit b417c34
1.4:
commit 590985382f29464edb1cf7cce70aa6e14dbfff00
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Wed Sep 10 09:50:45 2014 +0200

    v4l2sink: Unref pool after usage
    
    https://bugzilla.gnome.org/show_bug.cgi?id=73638
Comment 3 Nicolas Dufresne (ndufresne) 2014-09-10 12:29:38 UTC
Thanks again, will be fixed in next stable release.