v4l2sink: Unref pool after usage

https://bugzilla.gnome.org/show_bug.cgi?id=736384